<resources>
    <string name="app_name">githubApp</string>
    <string name="hint">Введите название репозитория</string>
    <string name="search">Искать</string>
    <string name="URL">URL</string>
    <string name="error">Возникла ошибка</string>
    <string name="sortBy">сортировать:</string>
    <string name="star">★</string>
    <string-array name="sortVariants">
        <item>лучшее совпадение</item>
        <item>больше звёзд</item>
        <item>больше ответвлений</item>
        <item>обновлялись недавно</item>
    </string-array>
    <string name="openRepo">Открыть репозиторий</string>

    <string name="readmeError">Возникла ошибка или у репозитория отсутствует Readme</string>
    <string name="share">Share</string>
    <string name="language">Язык</string>
    <string name="title_activity_nav">nav</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sort">Sort</string>
    <string name="starts">Звёзды</string>
    <string name="forks">Ответвления</string>
    <string name="updates">Обновления</string>
    <string name="bestMatch">Лучшее совпадение</string>
    <string name="starRepo">В избранное</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="email">email</string>
    <string name="github_login">Github login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Пароль</string>
    <string name="emailOrLogin">Email или логин</string>
    <string name="login">Войти</string>
    <string name="wrongLoginOrPassword">Неверный логин или пароль!</string>
    <string name="starred">Избранное</string>
    <string name="repos">Репозитории</string>
    <string name="logOut">Выйти</string>
    <string name="foundLanguages">Найденные языки</string>
    <string name="readme">Readme</string>
    <string name="files">Файлы</string>
</resources>
