<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fbfbfb"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context="com.example.nikit.githubapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etQuery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/btnSearch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/search"
                android:elevation="0dp"
                android:onClick="makeSearchQuery"
                app:srcCompat="?android:attr/actionModeWebSearchDrawable" />
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.161">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/sortBy"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/sortBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/sortVariants" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error"
            android:textSize="24sp"
            android:visibility="invisible" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvListItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible">

        </android.support.v7.widget.RecyclerView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />
    </FrameLayout>

</LinearLayout>
